@startuml
'https://plantuml.com/class-diagram

class App {
    main()
    start()
}

class Item{
    -name
    -date
    -description
    -mark

    +getName()
    +setName()
    +getDate()
    +setDate()
    +getDescription()
    +setDescription()
    +getMark()
    +setMark()

    +toString()
}

class MainWindowController{
    +initialize()
    +getTableIndex()

    -clickedHelp()
    -clickedNewItemButton()
    -clickedEditItem()
    -clickedSort()
    -clickedClearList()
    -clickedRemoveItem()
    -clickedMarkComplete()
    -clickedMarkIncomplete()
    -clickedSaveList()
    -clickedLoadList()
}

class NewItemWindowController{
    -clickedSave()
    -createDialogue(String)

    +setOnItemAdded()
}

class EditItemWindowController{
    -clickedSave()
    -createDialogue(String)

    +setOnItemEdited()
}

class HelpWindowController{
    -goToMainWindow()
}

class ListCentral {
    +ObservableList displayList
    +ObservableList list

    +indexConverter(int)
    +getDisplayList()
    +getWholeList()
    +setList(ObservableList)
    +addItem(Item)
    +removeItem(int)
    +removeAllItems()
    +editItemInfo(int index, String name, String description, LocalDate date)
    +markComplete(int)
    +markIncomplete(int)
    +sortItems(String)
}

class FileCentral {
    +saveList(ObservableList, File)
    +loadList(File)
}

javafx.Application <|--- App
javafx.MainWindow o-- javafx.NewItemWindow
javafx.MainWindow o-- javafx.EditItemWindow
javafx.MainWindow o-- javafx.HelpWindow

App o-- ListCentral
App o-- FileCentral
App o-- EditItemWindowController
App o-- NewItemWindowController
App o-- HelpWindowController
App o-- MainWindowController
ListCentral o-- Item

@enduml